--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,11 @@ certifi~=2023.11.17
 urllib3~=2.1.0
 setuptools~=58.1.0
 requests~=2.31.0
+h11~=0.14.0
+anyio~=3.7.1
+sniffio~=1.3.0
+fastapi~=0.104.1
+starlette~=0.27.0
+pydantic~=2.5.1
+click~=8.1.7
+uvicorn~=0.24.0.post1
